[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/graphics/min_max_circle.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/min_max_circle_bg.png" type="Texture" id=2]
[ext_resource path="res://ui/views/scripts/ui_loading.gd" type="Script" id=3]
[ext_resource path="res://ui/metricviz_components/scripts/metricviz_number_minmax_historic.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=28]
font_path = "res://assets/fonts/GemunuLibre-Light.ttf"

[sub_resource type="DynamicFont" id=34]
size = 28
use_mipmaps = true
use_filter = true
extra_spacing_top = -6
extra_spacing_char = 1
font_data = SubResource( 28 )

[sub_resource type="Shader" id=13]
code = "shader_type canvas_item;
render_mode blend_add;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	COLOR.a = abs((0.8 - UV.y)*1.5);
}"

[sub_resource type="ShaderMaterial" id=14]
shader = SubResource( 13 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 0.0392157 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 0.996078, 0.207843 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="CanvasItemMaterial" id=15]
blend_mode = 1

[sub_resource type="DynamicFontData" id=30]
font_path = "res://assets/fonts/GemunuLibre-Medium.ttf"

[sub_resource type="DynamicFont" id=31]
size = 64
use_mipmaps = true
use_filter = true
extra_spacing_top = -8
font_data = SubResource( 30 )

[sub_resource type="StyleBoxEmpty" id=37]

[sub_resource type="DynamicFont" id=35]
size = 30
use_mipmaps = true
use_filter = true
extra_spacing_top = -8
font_data = SubResource( 30 )

[sub_resource type="CanvasItemMaterial" id=16]
blend_mode = 1

[sub_resource type="DynamicFont" id=36]
size = 22
use_mipmaps = true
use_filter = true
extra_spacing_top = -6
extra_spacing_char = 1
font_data = SubResource( 28 )

[node name="UILoading" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetricViz-NumberMinMaxHistoric" type="VBoxContainer" parent="." groups=[
"metricviz",
"metricviz_number_minmax",
]]
margin_left = 704.0
margin_top = 256.0
margin_right = 1216.0
margin_bottom = 768.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
use_as_metricviz = false

[node name="DescriptionLabel" type="Label" parent="MetricViz-NumberMinMaxHistoric"]
use_parent_material = true
margin_right = 512.0
margin_bottom = 25.0
mouse_filter = 1
custom_colors/font_color = Color( 0.517647, 0.901961, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.843137, 1, 0.0392157 )
custom_constants/shadow_offset_y = 5
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 34 )
text = "Descr"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MetricViz-NumberMinMaxHistoric"]
margin_top = 29.0
margin_right = 512.0
margin_bottom = 512.0
rect_min_size = Vector2( 118, 118 )
rect_pivot_offset = Vector2( 165, 28 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundShader" type="Panel" parent="MetricViz-NumberMinMaxHistoric/MarginContainer"]
visible = false
modulate = Color( 0.176471, 0.827451, 1, 0.129412 )
material = SubResource( 14 )
margin_right = 512.0
margin_bottom = 483.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="MetricViz-NumberMinMaxHistoric/MarginContainer"]
visible = false
margin_right = 512.0
margin_bottom = 483.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MetricViz-NumberMinMaxHistoric/MarginContainer"]
margin_right = 512.0
margin_bottom = 483.0

[node name="HBoxContainer" type="VBoxContainer" parent="MetricViz-NumberMinMaxHistoric/MarginContainer/CenterContainer"]
modulate = Color( 0.603922, 0.870037, 1, 1 )
material = SubResource( 15 )
margin_left = 156.0
margin_top = 202.0
margin_right = 356.0
margin_bottom = 281.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = -8

[node name="MetricLabel" type="Label" parent="MetricViz-NumberMinMaxHistoric/MarginContainer/CenterContainer/HBoxContainer"]
use_parent_material = true
margin_right = 200.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0.752941, 0.94902, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.843137, 1, 0.0392157 )
custom_constants/shadow_offset_y = 10
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 31 )
custom_styles/normal = SubResource( 37 )
text = "100"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetricLabelPercent" type="Label" parent="MetricViz-NumberMinMaxHistoric/MarginContainer/CenterContainer/HBoxContainer"]
use_parent_material = true
margin_top = 54.0
margin_right = 200.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0.517647, 0.901961, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.843137, 1, 0.0392157 )
custom_constants/shadow_offset_y = 10
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 35 )
text = "%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scaler" type="Node2D" parent="MetricViz-NumberMinMaxHistoric/MarginContainer/CenterContainer"]
scale = Vector2( 0.23, 0.23 )

[node name="TextureProgress" type="TextureProgress" parent="MetricViz-NumberMinMaxHistoric/MarginContainer/CenterContainer/Scaler"]
material = SubResource( 16 )
margin_right = 1024.0
margin_bottom = 1024.0
size_flags_horizontal = 0
size_flags_vertical = 0
step = 0.1
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
fill_mode = 4
tint_under = Color( 0.290196, 0.643137, 1, 0.317647 )
tint_progress = Color( 0.372549, 0.796078, 1, 1 )
radial_initial_angle = 224.0
radial_fill_degrees = 271.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MetricViz-NumberMinMaxHistoric/MarginContainer/CenterContainer"]
margin_left = 256.0
margin_top = 241.0
margin_right = 256.0
margin_bottom = 241.0

[node name="Marker" type="Line2D" parent="MetricViz-NumberMinMaxHistoric/MarginContainer/CenterContainer/Control"]
rotation = 0.785398
scale = Vector2( 0.23, 0.23 )
points = PoolVector2Array( 185, 0, 256.522, 0 )
width = 5.0
default_color = Color( 0.6, 2.325, 3, 1 )
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="HBoxContainer" type="HBoxContainer" parent="MetricViz-NumberMinMaxHistoric/MarginContainer"]
margin_right = 512.0
margin_bottom = 483.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescrLabel" type="Label" parent="MetricViz-NumberMinMaxHistoric/MarginContainer/HBoxContainer"]
visible = false
modulate = Color( 0.839216, 1, 0.678431, 1 )
use_parent_material = true
margin_right = 254.0
margin_bottom = 483.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 36 )
text = "Description"
valign = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescrLabel2" type="Label" parent="MetricViz-NumberMinMaxHistoric/MarginContainer/HBoxContainer"]
visible = false
modulate = Color( 1, 0.721569, 0.721569, 1 )
use_parent_material = true
margin_right = 512.0
margin_bottom = 483.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 36 )
text = "Description"
align = 2
valign = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="MetricViz-NumberMinMaxHistoric"]

[node name="LoadingTween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="LoadingTween" to="." method="_on_LoadingTween_tween_all_completed"]
